exports[`no-prevent-default-in-passive-listener > invalid(1): element.addEventListener(\"click\", event => event.preventDefault(), {passive: true}); 1`] = `

  1 | element.addEventListener("click", event => event.preventDefault(), {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(1): element.addEventListener(\"click\", event => event.preventDefault(), {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("click", event => event.preventDefault(), {passive: true});
    |                                            ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("click", event => event.preventDefault(), {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(1): element.addEventListener(\"wheel\", (event: Event) => event.preventDefault(), {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", (event: Event) => event.preventDefault(), {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(1): element.addEventListener(\"wheel\", (event: Event) => event.preventDefault(), {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", (event: Event) => event.preventDefault(), {passive: true});
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", (event: Event) => event.preventDefault(), {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(10): element.addEventListener(\"wheel\", <EventListener>((event: Event) => event.preventDefault()), <AddEventListenerOptions>{passive: true}); 1`] = `

  1 | element.addEventListener("wheel", <EventListener>((event: Event) => event.preventDefault()), <AddEventListenerOptions>{passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(10): element.addEventListener(\"wheel\", <EventListener>((event: Event) => event.preventDefault()), <AddEventListenerOptions>{passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", <EventListener>((event: Event) => event.preventDefault()), <AddEventListenerOptions>{passive: true});
    |                                                                     ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", <EventListener>((event: Event) => event.preventDefault()), <AddEventListenerOptions>{passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(10): element.addEventListener?.(\"wheel\", event => event.preventDefault(), {passive: true}); 1`] = `

  1 | element.addEventListener?.("wheel", event => event.preventDefault(), {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(10): element.addEventListener?.(\"wheel\", event => event.preventDefault(), {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener?.("wheel", event => event.preventDefault(), {passive: true});
    |                                              ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener?.("wheel", event => event.preventDefault(), {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(11): element.addEventListener(\"wheel\", (event: Event) => event.preventDefault(), {passive: true as const}); 1`] = `

  1 | element.addEventListener("wheel", (event: Event) => event.preventDefault(), {passive: true as const});

`;

exports[`no-prevent-default-in-passive-listener > invalid(11): element.addEventListener(\"wheel\", (event: Event) => event.preventDefault(), {passive: true as const}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", (event: Event) => event.preventDefault(), {passive: true as const});
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", (event: Event) => event.preventDefault(), {passive: false as const});

`;

exports[`no-prevent-default-in-passive-listener > invalid(11): element.addEventListener(\"wheel\", function (event) { event.preventDefault(); }, {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", function (event) { event.preventDefault(); }, {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(11): element.addEventListener(\"wheel\", function (event) { event.preventDefault(); }, {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", function (event) { event.preventDefault(); }, {passive: true});
    |                                                      ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", function (event) { event.preventDefault(); }, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(12): element.addEventListener(\"wheel\", (event: Event) => event.preventDefault(), {passive: true satisfies boolean}); 1`] = `

  1 | element.addEventListener("wheel", (event: Event) => event.preventDefault(), {passive: true satisfies boolean});

`;

exports[`no-prevent-default-in-passive-listener > invalid(12): element.addEventListener(\"wheel\", (event: Event) => event.preventDefault(), {passive: true satisfies boolean}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", (event: Event) => event.preventDefault(), {passive: true satisfies boolean});
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", (event: Event) => event.preventDefault(), {passive: false satisfies boolean});

`;

exports[`no-prevent-default-in-passive-listener > invalid(12): element.addEventListener(\"wheel\", function handler(event) { event.preventDefault(); }, {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", function handler(event) { event.preventDefault(); }, {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(12): element.addEventListener(\"wheel\", function handler(event) { event.preventDefault(); }, {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", function handler(event) { event.preventDefault(); }, {passive: true});
    |                                                             ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", function handler(event) { event.preventDefault(); }, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(13): element.addEventListener(\"wheel\", (event: Event) => event.preventDefault(), {passive: <const>true}); 1`] = `

  1 | element.addEventListener("wheel", (event: Event) => event.preventDefault(), {passive: <const>true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(13): element.addEventListener(\"wheel\", (event: Event) => event.preventDefault(), {passive: <const>true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", (event: Event) => event.preventDefault(), {passive: <const>true});
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", (event: Event) => event.preventDefault(), {passive: <const>false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(13): element.addEventListener(\"wheel\", event => event?.preventDefault(), {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", event => event?.preventDefault(), {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(13): element.addEventListener(\"wheel\", event => event?.preventDefault(), {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", event => event?.preventDefault(), {passive: true});
    |                                            ^^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", event => event?.preventDefault(), {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(14): element.addEventListener(\"wheel\", (event: Event) => event.preventDefault(), {passive: true!}); 1`] = `

  1 | element.addEventListener("wheel", (event: Event) => event.preventDefault(), {passive: true!});

`;

exports[`no-prevent-default-in-passive-listener > invalid(14): element.addEventListener(\"wheel\", (event: Event) => event.preventDefault(), {passive: true!}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", (event: Event) => event.preventDefault(), {passive: true!});
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", (event: Event) => event.preventDefault(), {passive: false!});

`;

exports[`no-prevent-default-in-passive-listener > invalid(14): element.addEventListener(\"wheel\", event => event.preventDefault?.(), {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", event => event.preventDefault?.(), {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(14): element.addEventListener(\"wheel\", event => event.preventDefault?.(), {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", event => event.preventDefault?.(), {passive: true});
    |                                            ^^^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", event => event.preventDefault?.(), {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(15): element.addEventListener(\"wheel\", (event: Event) => event.preventDefault(), {passive: false, passive: true as const}); 1`] = `

  1 | element.addEventListener("wheel", (event: Event) => event.preventDefault(), {passive: false, passive: true as const});

`;

exports[`no-prevent-default-in-passive-listener > invalid(15): element.addEventListener(\"wheel\", (event: Event) => event.preventDefault(), {passive: false, passive: true as const}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", (event: Event) => event.preventDefault(), {passive: false, passive: true as const});
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", (event: Event) => event.preventDefault(), {passive: false, passive: false as const});

`;

exports[`no-prevent-default-in-passive-listener > invalid(15): element.addEventListener(\"wheel\", event => { if (event.cancelable) { event.preventDefault(); } }, {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", event => { if (event.cancelable) { event.preventDefault(); } }, {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(15): element.addEventListener(\"wheel\", event => { if (event.cancelable) { event.preventDefault(); } }, {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", event => { if (event.cancelable) { event.preventDefault(); } }, {passive: true});
    |                                                                      ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", event => { if (event.cancelable) { event.preventDefault(); } }, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(16): element.addEventListener(\"wheel\", event => { event.preventDefault(); event.preventDefault(); }, {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", event => { event.preventDefault(); event.preventDefault(); }, {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(16): element.addEventListener(\"wheel\", event => { event.preventDefault(); event.preventDefault(); }, {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", event => { event.preventDefault(); event.preventDefault(); }, {passive: true});
    |                                              ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", event => { event.preventDefault(); event.preventDefault(); }, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(16): element.addEventListener(\"wheel\", event => { event.preventDefault(); event.preventDefault(); }, {passive: true}); 3`] = `

Message:
> 1 | element.addEventListener("wheel", event => { event.preventDefault(); event.preventDefault(); }, {passive: true});
    |                                                                      ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", event => { event.preventDefault(); event.preventDefault(); }, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(17): element.addEventListener(\"wheel\", event => { { const event = other; event.preventDefault(); } event.preventDefault(); }, {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", event => { { const event = other; event.preventDefault(); } event.preventDefault(); }, {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(17): element.addEventListener(\"wheel\", event => { { const event = other; event.preventDefault(); } event.preventDefault(); }, {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", event => { { const event = other; event.preventDefault(); } event.preventDefault(); }, {passive: true});
    |                                                                                               ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", event => { { const event = other; event.preventDefault(); } event.preventDefault(); }, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(18): element.addEventListener(\"wheel\", async event => { event.preventDefault(); await task(); }, {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", async event => { event.preventDefault(); await task(); }, {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(18): element.addEventListener(\"wheel\", async event => { event.preventDefault(); await task(); }, {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", async event => { event.preventDefault(); await task(); }, {passive: true});
    |                                                    ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", async event => { event.preventDefault(); await task(); }, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(19): element.addEventListener(\"wheel\", async function (event) { event.preventDefault(); await task(); }, {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", async function (event) { event.preventDefault(); await task(); }, {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(19): element.addEventListener(\"wheel\", async function (event) { event.preventDefault(); await task(); }, {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", async function (event) { event.preventDefault(); await task(); }, {passive: true});
    |                                                            ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", async function (event) { event.preventDefault(); await task(); }, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(2): element.addEventListener(\"custom\", payload => payload.preventDefault(), {passive: true}); 1`] = `

  1 | element.addEventListener("custom", payload => payload.preventDefault(), {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(2): element.addEventListener(\"custom\", payload => payload.preventDefault(), {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("custom", payload => payload.preventDefault(), {passive: true});
    |                                               ^^^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("custom", payload => payload.preventDefault(), {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(2): element.addEventListener(\"wheel\", (event: Event) => event!.preventDefault(), {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", (event: Event) => event!.preventDefault(), {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(2): element.addEventListener(\"wheel\", (event: Event) => event!.preventDefault(), {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", (event: Event) => event!.preventDefault(), {passive: true});
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", (event: Event) => event!.preventDefault(), {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(20): element.addEventListener(\"wheel\", async event => { event.preventDefault(); await task(); event.preventDefault(); }, {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", async event => { event.preventDefault(); await task(); event.preventDefault(); }, {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(20): element.addEventListener(\"wheel\", async event => { event.preventDefault(); await task(); event.preventDefault(); }, {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", async event => { event.preventDefault(); await task(); event.preventDefault(); }, {passive: true});
    |                                                    ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", async event => { event.preventDefault(); await task(); event.preventDefault(); }, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(21): element.addEventListener(\"wheel\", async event => { await task(event.preventDefault()); }, {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", async event => { await task(event.preventDefault()); }, {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(21): element.addEventListener(\"wheel\", async event => { await task(event.preventDefault()); }, {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", async event => { await task(event.preventDefault()); }, {passive: true});
    |                                                               ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", async event => { await task(event.preventDefault()); }, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(22): element.addEventListener(\"wheel\", async event => { for await (const item of event.preventDefault()) {} }, {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", async event => { for await (const item of event.preventDefault()) {} }, {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(22): element.addEventListener(\"wheel\", async event => { for await (const item of event.preventDefault()) {} }, {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", async event => { for await (const item of event.preventDefault()) {} }, {passive: true});
    |                                                                             ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", async event => { for await (const item of event.preventDefault()) {} }, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(23): element.addEventListener(\"wheel\", event => { for (const item of items) { event.preventDefault(); } }, {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", event => { for (const item of items) { event.preventDefault(); } }, {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(23): element.addEventListener(\"wheel\", event => { for (const item of items) { event.preventDefault(); } }, {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", event => { for (const item of items) { event.preventDefault(); } }, {passive: true});
    |                                                                          ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", event => { for (const item of items) { event.preventDefault(); } }, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(24): element.addEventListener(\"wheel\", async event => { for (event.preventDefault(); condition;) { await task(); } }, {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", async event => { for (event.preventDefault(); condition;) { await task(); } }, {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(24): element.addEventListener(\"wheel\", async event => { for (event.preventDefault(); condition;) { await task(); } }, {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", async event => { for (event.preventDefault(); condition;) { await task(); } }, {passive: true});
    |                                                         ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", async event => { for (event.preventDefault(); condition;) { await task(); } }, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(25): element.addEventListener(\"wheel\", async event => { for (const item of items) { async function nested() { await task(); } event.preventDefault(); } }, {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", async event => { for (const item of items) { async function nested() { await task(); } event.preventDefault(); } }, {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(25): element.addEventListener(\"wheel\", async event => { for (const item of items) { async function nested() { await task(); } event.preventDefault(); } }, {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", async event => { for (const item of items) { async function nested() { await task(); } event.preventDefault(); } }, {passive: true});
    |                                                                                                                          ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", async event => { for (const item of items) { async function nested() { await task(); } event.preventDefault(); } }, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(26): element.addEventListener(\"wheel\", event => { async function nested() { await task(); } event.preventDefault(); }, {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", event => { async function nested() { await task(); } event.preventDefault(); }, {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(26): element.addEventListener(\"wheel\", event => { async function nested() { await task(); } event.preventDefault(); }, {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", event => { async function nested() { await task(); } event.preventDefault(); }, {passive: true});
    |                                                                                        ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", event => { async function nested() { await task(); } event.preventDefault(); }, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(27): element.addEventListener(\"wheel\", async event => { await task(); other.addEventListener(\"click\", payload => payload.preventDefault(), {passive: true}); }, {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", async event => { await task(); other.addEventListener("click", payload => payload.preventDefault(), {passive: true}); }, {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(27): element.addEventListener(\"wheel\", async event => { await task(); other.addEventListener(\"click\", payload => payload.preventDefault(), {passive: true}); }, {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", async event => { await task(); other.addEventListener("click", payload => payload.preventDefault(), {passive: true}); }, {passive: true});
    |                                                                                                             ^^^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", async event => { await task(); other.addEventListener("click", payload => payload.preventDefault(), {passive: false}); }, {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(28): element.addEventListener(\"wheel\", event => { other.addEventListener(\"click\", () => {}, {passive: false}); event.preventDefault(); }, {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", event => { other.addEventListener("click", () => {}, {passive: false}); event.preventDefault(); }, {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(28): element.addEventListener(\"wheel\", event => { other.addEventListener(\"click\", () => {}, {passive: false}); event.preventDefault(); }, {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", event => { other.addEventListener("click", () => {}, {passive: false}); event.preventDefault(); }, {passive: true});
    |                                                                                                           ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", event => { other.addEventListener("click", () => {}, {passive: false}); event.preventDefault(); }, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(29): element.addEventListener(\"wheel\", event => event.preventDefault(), {passive: false, passive: true}); 1`] = `

  1 | element.addEventListener("wheel", event => event.preventDefault(), {passive: false, passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(29): element.addEventListener(\"wheel\", event => event.preventDefault(), {passive: false, passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", event => event.preventDefault(), {passive: false, passive: true});
    |                                            ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", event => event.preventDefault(), {passive: false, passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(3): element.addEventListener(\"wheel\", (event: Event) => (event as Event).preventDefault(), {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", (event: Event) => (event as Event).preventDefault(), {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(3): element.addEventListener(\"wheel\", (event: Event) => (event as Event).preventDefault(), {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", (event: Event) => (event as Event).preventDefault(), {passive: true});
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", (event: Event) => (event as Event).preventDefault(), {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(3): element.addEventListener(type, event => event.preventDefault(), {passive: true}); 1`] = `

  1 | element.addEventListener(type, event => event.preventDefault(), {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(3): element.addEventListener(type, event => event.preventDefault(), {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener(type, event => event.preventDefault(), {passive: true});
    |                                         ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener(type, event => event.preventDefault(), {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(30): element.addEventListener(\"wheel\", event => event.preventDefault(), {get passive() { return false; }, passive: true}); 1`] = `

  1 | element.addEventListener("wheel", event => event.preventDefault(), {get passive() { return false; }, passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(30): element.addEventListener(\"wheel\", event => event.preventDefault(), {get passive() { return false; }, passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", event => event.preventDefault(), {get passive() { return false; }, passive: true});
    |                                            ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", event => event.preventDefault(), {get passive() { return false; }, passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(31): element.addEventListener(\"wheel\", event => event.preventDefault(), {capture: true, passive: true, once: true}); 1`] = `

  1 | element.addEventListener("wheel", event => event.preventDefault(), {capture: true, passive: true, once: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(31): element.addEventListener(\"wheel\", event => event.preventDefault(), {capture: true, passive: true, once: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", event => event.preventDefault(), {capture: true, passive: true, once: true});
    |                                            ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", event => event.preventDefault(), {capture: true, passive: false, once: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(32): element.addEventListener(\"wheel\", event => event[\"preventDefault\"](), {\"passive\": true}); 1`] = `

  1 | element.addEventListener("wheel", event => event["preventDefault"](), {"passive": true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(32): element.addEventListener(\"wheel\", event => event[\"preventDefault\"](), {\"passive\": true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", event => event["preventDefault"](), {"passive": true});
    |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", event => event["preventDefault"](), {"passive": false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(33): element.addEventListener(\"wheel\", ((event => (event).preventDefault())), ({passive: (true)})); 1`] = `

  1 | element.addEventListener("wheel", ((event => (event).preventDefault())), ({passive: (true)}));

`;

exports[`no-prevent-default-in-passive-listener > invalid(33): element.addEventListener(\"wheel\", ((event => (event).preventDefault())), ({passive: (true)})); 2`] = `

Message:
> 1 | element.addEventListener("wheel", ((event => (event).preventDefault())), ({passive: (true)}));
    |                                              ^^^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", ((event => (event).preventDefault())), ({passive: (false)}));

`;

exports[`no-prevent-default-in-passive-listener > invalid(34): element.addEventListener(\"wheel\", event => event.preventDefault(/* keep */), {/* before */ passive: (/* value */ true /* after */)}); 1`] = `

  1 | element.addEventListener("wheel", event => event.preventDefault(/* keep */), {/* before */ passive: (/* value */ true /* after */)});

`;

exports[`no-prevent-default-in-passive-listener > invalid(34): element.addEventListener(\"wheel\", event => event.preventDefault(/* keep */), {/* before */ passive: (/* value */ true /* after */)}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", event => event.preventDefault(/* keep */), {/* before */ passive: (/* value */ true /* after */)});
    |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", event => event.preventDefault(/* keep */), {/* before */ passive: (/* value */ false /* after */)});

`;

exports[`no-prevent-default-in-passive-listener > invalid(35): element.addEventListener(\"wheel\", event => { other.addEventListener(\"click\", event => event.preventDefault(), {passive: true}); }, {passive: false}); 1`] = `

  1 | element.addEventListener("wheel", event => { other.addEventListener("click", event => event.preventDefault(), {passive: true}); }, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(35): element.addEventListener(\"wheel\", event => { other.addEventListener(\"click\", event => event.preventDefault(), {passive: true}); }, {passive: false}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", event => { other.addEventListener("click", event => event.preventDefault(), {passive: true}); }, {passive: false});
    |                                                                                       ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", event => { other.addEventListener("click", event => event.preventDefault(), {passive: false}); }, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(36): element.addEventListener(\"wheel\", event => {\r\n  event.preventDefault();\r\n}, {\r\n  passive: true // keep\r\n});\r\n 1`] = `

  1 | element.addEventListener("wheel", event => {
  2 |   event.preventDefault();
  3 | }, {
  4 |   passive: true // keep
  5 | });
  6 |

`;

exports[`no-prevent-default-in-passive-listener > invalid(36): element.addEventListener(\"wheel\", event => {\r\n  event.preventDefault();\r\n}, {\r\n  passive: true // keep\r\n});\r\n 2`] = `

Message:
  1 | element.addEventListener("wheel", event => {
> 2 |   event.preventDefault();
    |   ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.
  3 | }, {
  4 |   passive: true // keep
  5 | });
  6 |

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", event => {
  2 |   event.preventDefault();
  3 | }, {
  4 |   passive: false // keep
  5 | });
  6 |

`;

exports[`no-prevent-default-in-passive-listener > invalid(4): element.addEventListener(\"wheel\", (event: Event) => (<Event>event).preventDefault(), {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", (event: Event) => (<Event>event).preventDefault(), {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(4): element.addEventListener(\"wheel\", (event: Event) => (<Event>event).preventDefault(), {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", (event: Event) => (<Event>event).preventDefault(), {passive: true});
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", (event: Event) => (<Event>event).preventDefault(), {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(4): element.addEventListener(\"wheel\", event => event[\`preventDefault\`](), {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", event => event[\`preventDefault\`](), {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(4): element.addEventListener(\"wheel\", event => event[\`preventDefault\`](), {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", event => event[\`preventDefault\`](), {passive: true});
    |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", event => event[\`preventDefault\`](), {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(5): element.addEventListener(\"wheel\", (event: Event) => (event satisfies Event).preventDefault(), {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", (event: Event) => (event satisfies Event).preventDefault(), {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(5): element.addEventListener(\"wheel\", (event: Event) => (event satisfies Event).preventDefault(), {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", (event: Event) => (event satisfies Event).preventDefault(), {passive: true});
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", (event: Event) => (event satisfies Event).preventDefault(), {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(5): element.addEventListener(\"wheel\", event => <>{event.preventDefault()}</>, {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", event => <>{event.preventDefault()}</>, {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(5): element.addEventListener(\"wheel\", event => <>{event.preventDefault()}</>, {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", event => <>{event.preventDefault()}</>, {passive: true});
    |                                               ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", event => <>{event.preventDefault()}</>, {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(6): addEventListener(\"wheel\", event => event.preventDefault(), {passive: true}); 1`] = `

  1 | addEventListener("wheel", event => event.preventDefault(), {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(6): addEventListener(\"wheel\", event => event.preventDefault(), {passive: true}); 2`] = `

Message:
> 1 | addEventListener("wheel", event => event.preventDefault(), {passive: true});
    |                                    ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | addEventListener("wheel", event => event.preventDefault(), {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(6): element.addEventListener(\"wheel\", (event: Event) => event.preventDefault!(), {passive: true}); 1`] = `

  1 | element.addEventListener("wheel", (event: Event) => event.preventDefault!(), {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(6): element.addEventListener(\"wheel\", (event: Event) => event.preventDefault!(), {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener("wheel", (event: Event) => event.preventDefault!(), {passive: true});
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", (event: Event) => event.preventDefault!(), {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(7): addEventListener?.(\"wheel\", event => event.preventDefault(), {passive: true}); 1`] = `

  1 | addEventListener?.("wheel", event => event.preventDefault(), {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(7): addEventListener?.(\"wheel\", event => event.preventDefault(), {passive: true}); 2`] = `

Message:
> 1 | addEventListener?.("wheel", event => event.preventDefault(), {passive: true});
    |                                      ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | addEventListener?.("wheel", event => event.preventDefault(), {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(7): element.addEventListener!(\"wheel\", (event: Event) => event.preventDefault(), {passive: true}); 1`] = `

  1 | element.addEventListener!("wheel", (event: Event) => event.preventDefault(), {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(7): element.addEventListener!(\"wheel\", (event: Event) => event.preventDefault(), {passive: true}); 2`] = `

Message:
> 1 | element.addEventListener!("wheel", (event: Event) => event.preventDefault(), {passive: true});
    |                                                      ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener!("wheel", (event: Event) => event.preventDefault(), {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(8): element.addEventListener(\"wheel\", ((event: Event) => event.preventDefault()) as EventListener, {passive: true} as const); 1`] = `

  1 | element.addEventListener("wheel", ((event: Event) => event.preventDefault()) as EventListener, {passive: true} as const);

`;

exports[`no-prevent-default-in-passive-listener > invalid(8): element.addEventListener(\"wheel\", ((event: Event) => event.preventDefault()) as EventListener, {passive: true} as const); 2`] = `

Message:
> 1 | element.addEventListener("wheel", ((event: Event) => event.preventDefault()) as EventListener, {passive: true} as const);
    |                                                      ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", ((event: Event) => event.preventDefault()) as EventListener, {passive: false} as const);

`;

exports[`no-prevent-default-in-passive-listener > invalid(8): element[\"addEventListener\"](\"wheel\", event => event.preventDefault(), {passive: true}); 1`] = `

  1 | element["addEventListener"]("wheel", event => event.preventDefault(), {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(8): element[\"addEventListener\"](\"wheel\", event => event.preventDefault(), {passive: true}); 2`] = `

Message:
> 1 | element["addEventListener"]("wheel", event => event.preventDefault(), {passive: true});
    |                                               ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element["addEventListener"]("wheel", event => event.preventDefault(), {passive: false});

`;

exports[`no-prevent-default-in-passive-listener > invalid(9): element.addEventListener(\"wheel\", ((event: Event) => event.preventDefault()) satisfies EventListener, {passive: true} satisfies AddEventListenerOptions); 1`] = `

  1 | element.addEventListener("wheel", ((event: Event) => event.preventDefault()) satisfies EventListener, {passive: true} satisfies AddEventListenerOptions);

`;

exports[`no-prevent-default-in-passive-listener > invalid(9): element.addEventListener(\"wheel\", ((event: Event) => event.preventDefault()) satisfies EventListener, {passive: true} satisfies AddEventListenerOptions); 2`] = `

Message:
> 1 | element.addEventListener("wheel", ((event: Event) => event.preventDefault()) satisfies EventListener, {passive: true} satisfies AddEventListenerOptions);
    |                                                      ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element.addEventListener("wheel", ((event: Event) => event.preventDefault()) satisfies EventListener, {passive: false} satisfies AddEventListenerOptions);

`;

exports[`no-prevent-default-in-passive-listener > invalid(9): element?.addEventListener(\"wheel\", event => event.preventDefault(), {passive: true}); 1`] = `

  1 | element?.addEventListener("wheel", event => event.preventDefault(), {passive: true});

`;

exports[`no-prevent-default-in-passive-listener > invalid(9): element?.addEventListener(\"wheel\", event => event.preventDefault(), {passive: true}); 2`] = `

Message:
> 1 | element?.addEventListener("wheel", event => event.preventDefault(), {passive: true});
    |                                             ^^^^^^^^^^^^^^^^^^^^^^ \`preventDefault()\` has no effect in a passive event listener.

Suggestion 1/1: Change \`passive\` to \`false\` to allow event cancellation.:
  1 | element?.addEventListener("wheel", event => event.preventDefault(), {passive: false});

`;
